# drawing-room

./: .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: ClientApplication.cpp  ClientApplication.h  main.cpp
gui/: CMakeLists.txt
gui/include/gui/: ImGuiLayer.h
gui/src/: ImGuiLayer.cpp
networking/: CMakeLists.txt
networking/include/networking/: TCPClient.h  TCPCommunicative.hpp  TCPConnection.h  TCPPackage.h  TCPServer.h
networking/include/utils/: log.h  settings.h
networking/src/: TCPClient.cpp  TCPConnection.cpp  TCPServer.cpp
server/: CMakeLists.txt
server/src/: main.cpp
